sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:30: error: unclosed comment
/*debut=0; fin=lgr-2
^AlgCocktailSort2:2: error: Missing closing brace `}' assumed here
def cocktailSort2() {
^